--- a/_includes/google-translate.html
+++ b/_includes/google-translate.html
@@ -6,6 +6,16 @@ function googleTranslateElementInit() {
     layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
     autoDisplay: false
   }, 'google_translate_element');
+
+  // Mobile version
+  if (document.getElementById('google_translate_element_mobile')) {
+    new google.translate.TranslateElement({
+      pageLanguage: 'de',
+      includedLanguages: '',
+      layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+      autoDisplay: false
+    }, 'google_translate_element_mobile');
+  }
 }
 </script>
 <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
