--- a/_includes/main-menu-mobile.html
+++ b/_includes/main-menu-mobile.html
@@ -6,5 +6,6 @@
       <a href="{{ item.url | relative_url }}">{{ item.name }}</a>
     </li>
     {% endfor %}
+    <li id="google_translate_element_mobile"></li>
   </ul>
 </div>
