--- a/_includes/call.html
+++ b/_includes/call.html
@@ -5,8 +5,15 @@
     {% endif %}
     {% if site.data.contact.email %}
     <div class="call-email"><strong>Email: </strong>
-      <a href="mailto:{{ .site.data.contact.email }}">
+      <a href="mailto:{{ site.data.contact.email }}">
         {{ site.data.contact.email }}
+      </a>
+    </div>
+    {% endif %}
+    {% if site.data.contact.whatsapp %}
+    <div class="call-whatsapp"><strong>WhatsApp: </strong>
+      <a href="{{ site.data.contact.whatsapp }}" target="_blank">
+        Nachricht senden
       </a>
     </div>
     {% endif %}
