Add legal pages (Impressum, Datenschutz) and update footer

--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,5 +1,5 @@
 <div class="social">
-  {% for item in site.data.social %}
-    <a href="{{ item.link }}" target="blank"><img src="{{ item.image | relative_url }}" title="{{ item.name }}" alt="{{ item.name }}" /></a>
-  {% endfor %}
+  <a href="{{ '/impressum/' | relative_url }}">Impressum</a>
+  <span style="margin: 0 10px;">|</span>
+  <a href="{{ '/datenschutz/' | relative_url }}">Datenschutz</a>
 </div>
