--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,9 +2,9 @@
 ---
 
 // Colors
-$primary: #e5261f;
-$primary-dark: #a01b16;
-$secondary: #f88379;
+$primary: #2c5f8d;
+$primary-dark: #1a3a5a;
+$secondary: #5a8bb8;
 $black: #2f2f41;
 $white: #ffffff;
 $white-offset: #fff6f8;
