--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
 <div class='header'>
   <div class="container">
     <div class="logo">
-      <a href="{{ '/' | relative_url }}"><span class="logo-text">helim.de</span></a>
+      <a href="{{ '/' | relative_url }}"><span class="logo-text">Helm Immobilien</span></a>
     </div>
     <div class="logo-mobile">
-      <a href="{{ '/' | relative_url }}"><span class="logo-text">helim.de</span></a>
+      <a href="{{ '/' | relative_url }}"><span class="logo-text">Helm Immobilien</span></a>
     </div>
     {% include main-menu.html %}
     {% include hamburger.html %}
