--- a/_sass/components/_main-menu.scss
+++ b/_sass/components/_main-menu.scss
@@ -13,7 +13,7 @@
       > a {
         padding: 10px 12px 10px 12px;
         display: inline-block;
-        font-weight: normal;
+        font-weight: 500;
         text-decoration: none;
         color: $primary;
         &:hover {
@@ -22,7 +22,7 @@
       }
       &.active {
         > a {
-          font-weight: bold;
+          font-weight: 600;
           text-decoration: none;
           &:hover {
             text-decoration: none;
