--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,6 +7,7 @@ bodyClass: "page-basic"
     <div class="row justify-content-start">
         <div class="col-12 col-md-8">
             <div class="service service-single">
+                <div id="google_translate_content_top" class="translate-content-top"></div>
                 <h1 class="title">{{page.title}}</h1>
                 <div class="content">{{content}}</div>
             </div>
