--- a/_sass/components/_translate.scss
+++ b/_sass/components/_translate.scss
@@ -1,9 +1,14 @@
-.translate-content-top {
+.translate-mobile-wrapper {
   display: block;
   text-align: center;
-  margin-bottom: 20px;
-  padding: 10px;
+  padding: 12px;
+  background-color: $primary;
+  // Desktop: Position in header, no background
   @include media-breakpoint-up(md) {
-    display: none;
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    padding: 0;
+    background-color: transparent;
   }
 }
