--- a/_includes/google-translate.html
+++ b/_includes/google-translate.html
@@ -1,13 +1,10 @@
 <script type="text/javascript">
 function googleTranslateElementInit() {
-  if (document.getElementById('google_translate_element')) {
-    new google.translate.TranslateElement({
-      pageLanguage: 'de',
-      includedLanguages: '',
-      layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
-      autoDisplay: false
-    }, 'google_translate_element');
-  }
+  new google.translate.TranslateElement({
+    pageLanguage: 'de',
+    includedLanguages: 'ar,fa,ps,tr,ku,en,ru,pl,ro,uk,el,it,sq,sr,hr',
+    layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+  }, 'google_translate_element');
 }
 </script>
 <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
