--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,7 @@
   {% include main-menu-mobile.html %}
   <div id="wrapper" class="wrapper">
     {% include header.html headerClass='header-extra' %}
+    <div id="google_translate_element" class="translate-banner"></div>
     {{content}}
   </div>
   {% include footer.html %}
