--- a/_sass/pages/_page-home.scss
+++ b/_sass/pages/_page-home.scss
@@ -1,2 +1,22 @@
 .page-home {
+  .intro {
+    .service {
+      display: block;
+      border: 2px solid $primary;
+      padding: 20px;
+      text-decoration: none;
+      cursor: pointer;
+      .service-title {
+        margin: 0;
+        color: $primary;
+        font-size: 1.3rem;
+        font-weight: bold;
+      }
+      p {
+        margin: 10px 0 0 0;
+        font-size: 1rem;
+        color: $black;
+      }
+    }
+  }
 }
