--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,6 +26,10 @@ bodyClass: "page-home"
           </div>
           {% endfor %}
         </div>
+
+        <div class="mehr-hilfe mt-2">
+          <a href="/anliegen/" class="mehr-hilfe-link">Zur Hilfe →</a>
+        </div>
       </div>
     </div>
   </div>
