--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,6 +9,10 @@ bodyClass: "page-basic"
             <div class="service service-single">
                 <h1 class="title">{{page.title}}</h1>
                 <div class="content">{{content}}</div>
+                <div class="content mt-5">
+                    <h2>Kontakt</h2>
+                    {% include contact-buttons.html %}
+                </div>
             </div>
         </div>
     </div>
