--- a/_layouts/services.html
+++ b/_layouts/services.html
@@ -22,14 +22,12 @@ bodyClass: "page-services"
   <div class="row">
     {% for service in site.services %}
     <div class="col-12 col-md-6 mb-3">
-      <div class="service service-summary">
+      <a href="{{ service.url | relative_url }}" class="service service-summary">
         <div class="service-content">
-          <h2 class="service-title">
-            <a href="{{ service.url | relative_url }}">{{ service.title }}</a>
-          </h2>
+          <h2 class="service-title">{{ service.title }}</h2>
           <p>{{ service.excerpt | markdownify | strip_html | truncate: 100 }}</p>
         </div>
-      </div>
+      </a>
     </div>
     {% endfor %}
   </div>
