Standardize h1 typography across entire site
Changes:
- Use $black variable in _title.scss (remove hardcoded color)
- Add .h1 class support alongside h1 element
- Remove h1 overrides in _intro.scss (font-size, font-weight)
- Remove h1 font-family override in _content.scss (was forcing sans-serif)
- Remove h1 block in _page-home.scss (margin/padding)

Result: All h1 elements now consistently use Playfair Display serif font
with size 30px (32px on md+), line-height 1.2, throughout the site.

--- a/_sass/components/_intro.scss
+++ b/_sass/components/_intro.scss
@@ -11,27 +11,20 @@
   }
   h1 {
     color: $black;
-    font-size: 42px;
-    font-weight: bold;
-    line-height: 1.2;
     @include media-breakpoint-up(md) {
       width: 80%;
-      font-size: 48px;
-    }
-    @include media-breakpoint-up(lg) {
-      font-size: 50px;
     }
   }
   h2 {
     width: 80%;
-    font-size: 1.2rem;
-    line-height: 1.4;
+    font-size: 20px;
+    line-height: 1.5;
     margin-bottom: 30px;
     color: $black;
     font-family: $font-family-base;
   }
   p {
-    font-size: 1.2rem;
+    font-size: 20px;
     font-weight: light;
     line-height: 1.5;
     color: $black;
@@ -39,9 +32,35 @@
       width: 80%;
     }
   }
+  strong {
+    font-size: 20px;
+  }
 }
 
 .intro-small {
   padding-top: 100px;
   padding-bottom: 30px;
+}
+
+.intro-buttons {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  margin-top: 30px;
+  @include media-breakpoint-up(md) {
+    flex-direction: row;
+    gap: 15px;
+  }
+  .button {
+    flex: 1;
+    text-align: center;
+    padding: 20px;
+    height: auto;
+    line-height: 1.4;
+    white-space: normal;
+    min-height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
