--- a/_sass/components/_content.scss
+++ b/_sass/components/_content.scss
@@ -9,23 +9,19 @@
     margin-bottom: 20px;
   }
   strong {
-    font-width: bold;
+    font-weight: bold;
   }
   em {
     font-style: italic;
   }
   p {
     font-family: $font-family-base;
+    font-size: 18px;
     line-height: 1.56;
     color: $black;
   }
   h1 {
-    font-family: $font-family-base;
-    font-size: 34px;
-    line-height: 1.26;
-    font-weight: normal;
     margin-top: 30px;
-    margin-bottom: 20px;
   }
   h2 {
     font-family: $font-family-base;
@@ -56,6 +52,7 @@
     list-style: decimal;
   }
   li {
+    font-size: 18px;
     margin-bottom: 5px;
     line-height: 1.56;
     margin-left: 20px;
@@ -71,7 +68,7 @@
     margin-bottom: 30px;
     th,
     td {
-      padding: 5px;
+      padding: 10px;
       vertical-align: top;
       border-top: 1px solid $white-offset;
     }
