--- a/_sass/components/_type.scss
+++ b/_sass/components/_type.scss
@@ -1,10 +1,11 @@
 p {
+  font-size: 18px;
   line-height: 26px;
   color: $black;
   font-family: $font-family-base;
   margin-bottom: 20px;
 }
-h1 {
+h1, .h1 {
   font-size: 30px;
   font-family: $font-family-heading;
   line-height: 1.2;
