--- a/_sass/pages/_page-home.scss
+++ b/_sass/pages/_page-home.scss
@@ -3,19 +3,74 @@
     .service {
       display: block;
       border: 2px solid $primary;
-      padding: 20px;
+      padding: 12px 45px 12px 15px;
       text-decoration: none;
       cursor: pointer;
+      position: relative;
+      transition: all 0.2s ease;
+      background: $white;
+
+      // Arrow indicator at right
+      &::after {
+        content: "▶";
+        position: absolute;
+        right: 15px;
+        top: 50%;
+        transform: translateY(-50%);
+        color: $primary;
+        font-size: 20px;
+        transition: transform 0.2s ease;
+      }
+
+      &:hover {
+        border-color: darken($primary, 10%);
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+        transform: translateY(-1px);
+
+        &::after {
+          transform: translateY(-50%) translateX(3px);
+        }
+      }
+
+      &:focus {
+        outline: 3px solid $primary-light;
+        outline-offset: 2px;
+        border-color: $primary-light;
+      }
+
       .service-title {
         margin: 0;
         color: $primary;
-        font-size: 1.3rem;
+        font-size: 22px;
         font-weight: bold;
+        line-height: 1.3;
       }
+
       p {
-        margin: 10px 0 0 0;
-        font-size: 1rem;
+        margin: 3px 0 0 0;
+        font-size: 18px;
+        line-height: 1.3;
         color: $black;
+      }
+    }
+
+    .mehr-hilfe {
+      text-align: center;
+
+      .mehr-hilfe-link {
+        font-size: 18px;
+        color: $primary;
+        text-decoration: none;
+
+        &:hover {
+          text-decoration: underline;
+          color: $primary-light;
+        }
+
+        &:focus {
+          outline: 3px solid $primary-light;
+          outline-offset: 2px;
+        }
       }
     }
   }
