--- a/_sass/components/_logo.scss
+++ b/_sass/components/_logo.scss
@@ -14,9 +14,10 @@
     color: inherit;
   }
   .logo-text {
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-weight: 600;
     line-height: 1.2;
+    font-family: $font-family-heading;
   }
 }
 .logo-mobile {
@@ -38,8 +39,9 @@
     color: inherit;
   }
   .logo-text {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     font-weight: 600;
     line-height: 1.2;
+    font-family: $font-family-heading;
   }
 }
