--- a/_sass/components/_hamburger.scss
+++ b/_sass/components/_hamburger.scss
@@ -1,13 +1,13 @@
 .hamburger {
   padding: 10px 0 10px 10px;
-  outline: none;
   z-index: 30;
   cursor: pointer;
   @include media-breakpoint-up(md) {
     display: none;
   }
   &:focus {
-    outline: none;
+    outline: 3px solid $primary-light;
+    outline-offset: 2px;
   }
   .hamburger-inner,
   .hamburger-inner::before,
