--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -103,19 +103,22 @@ $sub-footer-text-color: $white;
 @import "components/feature";
 @import "components/social";
 @import "components/translate";
+@import "components/contact-buttons";
+@import "components/contact-form";
 // @import "components/fonts"; // Uncomment this line to self host font
 
 // Pages
 @import "pages/page-home";
 @import "pages/page-teams";
 @import "pages/page-service";
+@import "pages/page-services";
 
 body {
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.2;
   font-family: $font-family-base;
   @include media-breakpoint-up(md) {
-    font-size: 16px;
+    font-size: 18px;
     line-height: 1.3;
   }
 }
