--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,16 @@
 <div class='header'>
   <div class="container">
     <div class="logo">
-      <a href="{{ '/' | relative_url }}"><span class="logo-text">Helm Immobilien</span></a>
+      <a href="{{ '/' | relative_url }}">
+        <img src="{{ '/images/android-chrome-512x512.png' | relative_url }}" alt="Helm" class="logo-icon">
+        <span class="logo-text">Helm Immobilien</span>
+      </a>
     </div>
     <div class="logo-mobile">
-      <a href="{{ '/' | relative_url }}"><span class="logo-text">Helm Immobilien</span></a>
+      <a href="{{ '/' | relative_url }}">
+        <img src="{{ '/images/android-chrome-512x512.png' | relative_url }}" alt="Helm" class="logo-icon">
+        <span class="logo-text">Helm Immobilien</span>
+      </a>
     </div>
     {% include main-menu.html %}
     {% include hamburger.html %}
