Rebrand to HELIM - Haus- und Eigentumsmanagement für Liegenschaften
Changes:
- Update page title and meta tags with full brand name
- Desktop logo shows full name: HELIM – Haus- und Eigentumsmanagement für Liegenschaften
- Mobile logo shows short name: HELIM (to avoid overflow)
- Update site config and webmanifest
- Update footer copyright to HELIM
- Remove personal name (Helm) from branding

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,14 +2,14 @@
   <div class="container">
     <div class="logo">
       <a href="{{ '/' | relative_url }}">
-        <img src="{{ '/images/android-chrome-512x512.png' | relative_url }}" alt="Helm" class="logo-icon">
-        <span class="logo-text">Helm Immobilien</span>
+        <img src="{{ '/images/android-chrome-512x512.png' | relative_url }}" alt="HELIM" class="logo-icon">
+        <span class="logo-text">HELIM – Haus- und Eigentumsmanagement für Liegenschaften</span>
       </a>
     </div>
     <div class="logo-mobile">
       <a href="{{ '/' | relative_url }}">
-        <img src="{{ '/images/android-chrome-512x512.png' | relative_url }}" alt="Helm" class="logo-icon">
-        <span class="logo-text">Helm Immobilien</span>
+        <img src="{{ '/images/android-chrome-512x512.png' | relative_url }}" alt="HELIM" class="logo-icon">
+        <span class="logo-text">HELIM</span>
       </a>
     </div>
     {% include main-menu.html %}
