--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
         <img src="{{ '/images/android-chrome-512x512.png' | relative_url }}" alt="HELIM" class="logo-icon">
         <span class="logo-text">
           <span class="logo-text-main">HELIM</span>
-          <span class="logo-text-sub">– Haus- und Eigentumsmanagement für Liegenschaften</span>
+          <span class="logo-text-sub">Haus- und Eigentumsmanagement für Liegenschaften</span>
         </span>
       </a>
     </div>
