--- a/_sass/components/_social.scss
+++ b/_sass/components/_social.scss
@@ -8,6 +8,7 @@
     padding: 10px;
     display: inline-block;
     color: $white;
+    font-size: 1.125rem;
     text-decoration: none;
     &:hover {
       opacity: 0.8;
