Ändere Logo-Schriftart zu Arial für bessere Lesbarkeit

--- a/_sass/components/_logo.scss
+++ b/_sass/components/_logo.scss
@@ -25,10 +25,12 @@
   .logo-text-main {
     font-size: 1.5rem;
     font-weight: 600;
+    font-family: Arial, sans-serif;
   }
   .logo-text-sub {
     font-size: 1.125rem;
     font-weight: 400;
+    font-family: Arial, sans-serif;
   }
 }
 .logo-mobile {
@@ -54,6 +56,6 @@
     font-size: 1.5rem;
     font-weight: 600;
     line-height: 1.2;
-    font-family: $font-family-heading;
+    font-family: Arial, sans-serif;
   }
 }
