Füge Konfuzio Chatbot hinzu

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,5 +41,8 @@
   <script type="text/javascript" src="{{ '/assets/js/scripts.js' | relative_url }}"></script>
   {% include google-analytics.html %}
   {% include google-translate.html %}
+  <script id="__konfuzioChatSdk__" data-chatbot-id="69559b5d2565b9daa264df3d"
+    src="https://widget.konfuzio.com/konfuzio-chat-sdk.js">
+  </script>
 </body>
 </html>
