--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,17 +2,17 @@
   <div class="container">
     <div class="logo">
       <a href="{{ '/' | relative_url }}">
-        <img src="{{ '/images/android-chrome-512x512.png' | relative_url }}" alt="HELIM" class="logo-icon">
+        <img src="{{ '/images/android-chrome-512x512.png' | relative_url }}" alt="HELMONT" class="logo-icon">
         <span class="logo-text">
-          <span class="logo-text-main">HELIM</span>
-          <span class="logo-text-sub">Haus, Eigentum, Liegenschaften - Immobilien Management</span>
+          <span class="logo-text-main">HELMONT</span>
+          <span class="logo-text-sub">Immobilien Management</span>
         </span>
       </a>
     </div>
     <div class="logo-mobile">
       <a href="{{ '/' | relative_url }}">
-        <img src="{{ '/images/android-chrome-512x512.png' | relative_url }}" alt="HELIM" class="logo-icon">
-        <span class="logo-text">HELIM</span>
+        <img src="{{ '/images/android-chrome-512x512.png' | relative_url }}" alt="HELMONT" class="logo-icon">
+        <span class="logo-text">HELMONT</span>
       </a>
     </div>
     {% include main-menu.html %}
