--- a/_sass/components/_content.scss
+++ b/_sass/components/_content.scss
@@ -14,27 +14,7 @@
   em {
     font-style: italic;
   }
-  p {
-    font-family: $font-family-base;
-    font-size: 18px;
-    line-height: 1.56;
-    color: $black;
-  }
-  h1 {
-    margin-top: 30px;
-  }
-  h2 {
-    font-family: $font-family-base;
-    font-size: 26px;
-    font-weight: normal;
-    line-height: 1.4;
-    margin-top: 30px;
-  }
-  h3 {
-    font-family: $font-family-base;
-    font-size: 20px;
-    line-height: 1.4;
-    font-weight: normal;
+  h1, h2, h3 {
     margin-top: 30px;
   }
   ul,
