Ergänze Beispiel für versehentliche Schäden durch Mieter

--- a/_includes/contact-buttons.html
+++ b/_includes/contact-buttons.html
@@ -6,7 +6,7 @@
 
   <div class="contact-row">
     <a href="/problem/" class="button button-problem">PROBLEM</a>
-    <p class="contact-text">Lampe kaputt, Tür klemmt, Wasserhahn tropft, Schimmel</p>
+    <p class="contact-text">Lampe kaputt, Tür klemmt, Wasserhahn tropft, Schimmel, Versehentlich etwas kaputt gemacht</p>
   </div>
 
   <div class="contact-row">
