--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,15 +6,16 @@ bodyClass: "page-home"
 <div class="intro">
   <div class="container">
     <div class="row justify-content-start">
-      <div class="col-12 col-md-7 col-lg-6 order-2 order-md-1">
+      <div class="col-12 col-lg-6 order-2 order-lg-1">
         <div class="content">{{ content }}</div>
         {% if page.show_call_box %}
           {% include call.html show_button=true %}
         {% endif %}
       </div>
-      <div class="col-12 col-md-5 col-lg-6 order-1 order-md-2">
-        <iframe width="500px" height="700px" frameborder="0"
-          src="https://widget.konfuzio.com?kbId=69567b852565b9daa264df45&embed=true&hide-chat-actions=true">
+      <div class="col-12 col-lg-6 order-1 order-lg-2">
+        <iframe frameborder="0"
+          src="https://widget.konfuzio.com?kbId=69567b852565b9daa264df45&embed=true&hide-chat-actions=true"
+          style="width: 100%; max-width: 500px; height: 700px;">
         </iframe>
 
         <div class="mehr-hilfe mt-2">
