--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,7 +15,7 @@ bodyClass: "page-home"
       <div class="col-12 col-lg-6 order-1 order-lg-2">
         <iframe frameborder="0"
           src="https://widget.konfuzio.com?kbId=69567b852565b9daa264df45&embed=true&hide-chat-actions=true"
-          style="width: 100%; max-width: 500px; height: 700px;">
+          style="width: 100%; max-width: 500px; height: 700px; max-height: 80vh;">
         </iframe>
 
         <div class="mehr-hilfe mt-2">
