--- a/_sass/components/_main-menu-mobile.scss
+++ b/_sass/components/_main-menu-mobile.scss
@@ -39,7 +39,7 @@
     }
   }
   ul {
-    font-size: 30px;
+    font-size: 1.875rem; // 30px
     font-family: $font-family-heading;
     text-align: center;
     list-style: none;
