--- a/_sass/components/_buttons.scss
+++ b/_sass/components/_buttons.scss
@@ -7,7 +7,7 @@
   //box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
   background: $primary;
   border-radius: 4px;
-  font-size: 18px;
+  font-size: 1.125rem; // 18px
   font-weight: normal;
   text-transform: uppercase;
   letter-spacing: 0.025em;
@@ -31,7 +31,7 @@
 .button-question {
   background: $primary;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 1.25rem; // 20px
   padding: 20px 30px;
   height: auto;
   line-height: 1.4;
@@ -49,7 +49,7 @@
   }
   &::after {
     content: " ▶";
-    font-size: 18px;
+    font-size: 1.125rem; // 18px
     margin-left: 8px;
   }
 }
@@ -58,7 +58,7 @@
   background: #ffc107;
   color: #000000;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 1.25rem; // 20px
   padding: 20px 30px;
   height: auto;
   line-height: 1.4;
@@ -78,7 +78,7 @@
   }
   &::after {
     content: " ▶";
-    font-size: 18px;
+    font-size: 1.125rem; // 18px
     margin-left: 8px;
   }
 }
@@ -86,7 +86,7 @@
 .button-emergency {
   background: #dc3545;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 1.25rem; // 20px
   padding: 20px 30px;
   height: auto;
   line-height: 1.4;
@@ -104,7 +104,7 @@
   }
   &::after {
     content: " ▶";
-    font-size: 18px;
+    font-size: 1.125rem; // 18px
     margin-left: 8px;
   }
 }
@@ -112,7 +112,7 @@
 .button-chatbot {
   background: #000000;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 1.25rem; // 20px
   padding: 20px 30px;
   height: auto;
   line-height: 1.4;
@@ -130,7 +130,7 @@
   }
   &::after {
     content: " ▶";
-    font-size: 18px;
+    font-size: 1.125rem; // 18px
     margin-left: 8px;
   }
 }
