--- a/_sass/components/_contact-buttons.scss
+++ b/_sass/components/_contact-buttons.scss
@@ -25,7 +25,7 @@
       line-height: 1.4;
       white-space: nowrap;
       width: 180px;
-      font-size: 20px;
+      font-size: 1.25rem; // 20px
       font-weight: bold;
       flex-shrink: 0;
       text-decoration: none !important;
@@ -44,7 +44,7 @@
     }
 
     .contact-text {
-      font-size: 18px;
+      font-size: 1.125rem; // 18px
       line-height: 1.5;
       color: $black;
       margin: 0;
