--- a/_sass/components/_sub-footer.scss
+++ b/_sass/components/_sub-footer.scss
@@ -17,7 +17,7 @@
   }
   .copyright {
     margin-top: 10px;
-    font-size: 14px;
+    font-size: 0.875rem; // 14px
     a {
       font-weight: bold;
       color: inherit;
