--- a/_sass/pages/_page-services.scss
+++ b/_sass/pages/_page-services.scss
@@ -17,7 +17,7 @@
       top: 50%;
       transform: translateY(-50%);
       color: $primary;
-      font-size: 20px;
+      font-size: 1.25rem; // 20px
       transition: transform 0.2s ease;
     }
 
@@ -40,14 +40,14 @@
     .service-title {
       margin: 0;
       color: $primary;
-      font-size: 22px;
+      font-size: 1.375rem; // 22px
       font-weight: bold;
       line-height: 1.3;
     }
 
     p {
       margin: 3px 0 0 0;
-      font-size: 18px;
+      font-size: 1.125rem; // 18px
       line-height: 1.3;
       color: $black;
     }
