--- a/_sass/pages/_page-teams.scss
+++ b/_sass/pages/_page-teams.scss
@@ -17,14 +17,14 @@
       flex: 1;
       h2 {
         margin: 0;
-        font-size: 22px;
+        font-size: 1.375rem; // 22px
         font-weight: normal;
       }
       p {
         color: $black;
         text-transform: uppercase;
         margin: 0;
-        font-size: 12px;
+        font-size: 0.75rem; // 12px
         font-weight: 500;
       }
     }
