Verbessere Google Translate Banner mit Zoom-Controls
- Google Translate Button verkleinert und Text auf '🌍 Sprache' geändert
- Separate Zoom-Buttons hinzugefügt: A-, A, A+
- Zoom funktioniert jetzt für gesamten Seitentext
- Layout splittet auf Mobile: Sprache oben, Zoom darunter
- Zoom-Level wird in localStorage gespeichert

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,16 @@
   {% include main-menu-mobile.html %}
   <div id="wrapper" class="wrapper">
     {% include header.html headerClass='header-extra' %}
-    <div id="google_translate_element" class="translate-banner"></div>
+    <div class="translate-banner">
+      <div class="translate-controls">
+        <div id="google_translate_element"></div>
+        <div class="zoom-controls">
+          <button class="zoom-btn" id="zoom-out" aria-label="Text verkleinern">A-</button>
+          <button class="zoom-btn" id="zoom-reset" aria-label="Textgröße zurücksetzen">A</button>
+          <button class="zoom-btn" id="zoom-in" aria-label="Text vergrößern">A+</button>
+        </div>
+      </div>
+    </div>
     {{content}}
   </div>
   {% include footer.html %}
